**  denotes quite substantial/important changes
*** denotes really big changes 

ISSUES:

* bam - allow a blocking covariate for AR1?

* warn about, or at least report, rank deficiency?

* vis.gam --- set "re" terms to zero by default?? (clearly better - easy?)

* let t2's expand by penalty in summary/anova??

* convergence failure *windows only* with mack example - see Freiburg
  course. (sos smooth has high condition number)

* gam.check is using qq.gam on gamm models with random effects and cor struct
  - can't be right - need a warning.

* initial.sp failure reported in weird situation: 
  see mgcv-related/bugs/initial.sp

* users can use as.factor(a) in formula, and variable.summary won't know 
  about it - causes a problem is a is character, for example. Could coerce
  character to factor, but is that general enough? what about if a was numeric
  then summary doesn't reflect how it's used?  

* F needed in gam object?

* still not really happy with nesting constraints, especially under rank
  deficiency.

1.7-23

* sos smooth model matrix re-scaled for better conditioning.

1.7-22

* Predict.matrix.pspline.smooth now allows prediction outside range of knots, 
  and uses linear extrapolation in this case.

* missing drop=FALSE in reTest called by summary.gam caused 1-D random effect
  p-value computation to fail. Fixed (thanks Silje Skår).

1.7-21

** soap film smoother class added. See ?soap

* Polish translation added thanks to Lukasz Daniel.

* mgcv/po/R-mgcv.pot up-dated.

* plot methods for smooths modified slightly to allow methods to return 
  plot data directly, without a prediction matrix.

1.7-20

* '...' now passed to termplot by plot.gam (thanks Andreas Eckner).

* fix to null deviance computation for binomial when n>1, matrix response 
  used and an offset is present. (Thanks to Tim Miller)

* Some pruning of unused code from recov and reTest.

* recov modified to stop it returning a numerically non-symmetric Ve, and 